--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -242,6 +242,7 @@
                                     <div class="card-body txt-alg-jf">
                                         <p><strong>10:00 </strong>
                                             Выезд с центра Запорожья после минутки позитива.
+					    <img src="/images/Emoji/1f600.png" alt="" height="20px">
                                             Фестивальная - Металлургов - Каховская заберем Вас в этих 3-х местах где
                                             удобно, о месте посадки пишите при бронировании.
                                         </p>
