--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -269,9 +269,12 @@
                                             множество интересных сюрпризов.
                                             Я могу еще долго писать Вам так нам будет хорошо, но стоит увидеть своими
                                             глазами эту красоту.
+						<img src="/images/Emoji/1f642.png" alt="" height="20px">
                                         </p>
                                         <p><strong>14:50 </strong>
-                                            Мы уже в Запорожье, В ПОЛНОМ ВОСТОРГЕ с сыром и медом возвращаемся
+                                            Мы уже в Запорожье, В ПОЛНОМ ВОСТОРГЕ
+						<img src="/images/Emoji/1f607.png" alt="" height="20px">
+					    с сыром и медом возвращаемся
                                             домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их
                                             взять с собой).
                                         </p>
