--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -186,11 +186,17 @@
                         <p>
                             Бронирование билетов осуществляется заранеe: 
                         </p>
+			 
+			<!-- Забронировать -->
                         <div class="page-booking-btn ml-1 mt-1 mb-1 row">
+				<a href="https://novipovorot.pp.ua/booking.html">
                             <button type="button" class="btn btn-outline-primary mr-3">
-                                <a href="https://novipovorot.pp.ua/booking.html">Забронировать</a>
+                                Забронировать
                             </button>
+					</a>
                         </div>
+			<!-- //Забронировать -->
+			    
                         <p>
                             Присоединяйтесь к сообществу в социальных сетях:
                         <ul class="social_section_1info mt-1 mb-1">
