--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -144,10 +144,17 @@
                         </p>
                         <p>
                             Бронирование билетов осуществляется заранеe: </p>
+                       
+                        <!-- Забронировать -->
                         <div class="page-booking-btn ml-1 mt-1 mb-1 row">
-                            <button type="button" class="btn btn-outline-primary mr-3"> <a
-                                    href="https://novipovorot.pp.ua/booking.html">Забронировать</a> </button>
+                            <a href="https://novipovorot.pp.ua/booking.html">
+                                <button type="button" class="btn btn-outline-primary mr-3">
+                                    Забронировать
+                                </button>
+                            </a>
                         </div>
+                        <!-- //Забронировать -->
+                        
                         <p>
                             Присоединяйтесь к сообществу в социальных сетях:
                         <ul class="social_section_1info mt-1 mb-1">
