--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -166,11 +166,31 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Цена билета ДО <strong>7 июня* :</strong><u>400 грн.</u> - от 6 до 200 лет, <u>390 грн.</u> 5 - 10 лет, до 
+                                Цена билета <u>350 грн.</u> - от 6 до 200 лет, <u>300 грн.</u> 4 - 6 лет, до 
                                 4х бесплатно (без предоставления отдельного места в транспорте). 
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
+				При брони до <strong>15.06</strong> <u>365 грн.</u> - от 6 до 200 лет, <u>315 грн.</u> 4 - 6 лет, 
+				до 4х бесплатно (без предоставления отдельного места в транспорте).
+			     </span>
+                            <hr>    
+			    <span class="txt-alg-jf">
+				При брони с <strong>16.06</strong> <u>380 грн.</u> - от 6 до 200 лет, <u>325 грн.</u> 4 - 6 лет, 
+				до 4х бесплатно (без предоставления отдельного места в транспорте).
+			    </span>
+                            <hr>
+			    <i>Ждем Вас, Ваших родных, близких и друзей на экскурсию!</i>
+			    <span class="txt-alg-jf">
+				Цена билета с экскурсией по конному комплексу <u>400 грн.</u> от 6 до 200 лет, <u>350 грн.</u> 4-6 лет,
+				до 4х бесплатно (без предоставления отдельного места в транспорте).
+			    </span>
+                            <hr>
+			   <i>
+			     Места в транспорте по датам оплат, раньше платишь, ближе к водителю 
+			     едешь (1 кто забронировал, выбирает где сидит
+			     <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
+			   </i>   
                                 С <strong>8 июня </strong><u>430 грн.</u> - взрослые, <u>410 грн.</u> - дети.
                             </span>
                         </div>
