--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -180,7 +180,7 @@
 				до 4х бесплатно (без предоставления отдельного места в транспорте).
 			    </span>
                             <hr>
-			    <i>Ждем Вас, Ваших родных, близких и друзей на экскурсию!</i>
+			    <i>Ждем Вас, Ваших родных, близких и друзей на экскурсию!</i><br>
 			    <span class="txt-alg-jf">
 				Цена билета с экскурсией по конному комплексу <u>400 грн.</u> от 6 до 200 лет, <u>350 грн.</u> 4-6 лет,
 				до 4х бесплатно (без предоставления отдельного места в транспорте).
@@ -191,8 +191,6 @@
 			     едешь (1 кто забронировал, выбирает где сидит
 			     <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
 			   </i>   
-                                С <strong>8 июня </strong><u>430 грн.</u> - взрослые, <u>410 грн.</u> - дети.
-                            </span>
                         </div>
                         <!-- //Alert info -->
                         
