--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -459,7 +459,10 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Индивидуальная покупка сыра от 45 до 60 грн /100 г от вида и йогурта.
+                                   Kатание на лошадках - 50грн;
+                                </li>
+				<li class="list-group-item list-group-item-danger ">
+                                   питание с собой. 
                                 </li>
                             </ul>
                         </div>
