--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -432,26 +432,27 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                  Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; <br>
+                                 проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;<br>
                                   (от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    экскурсия по Сырной ферме;
+                                    входной билет и экскурсия в Центре Пылышенко;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   дегустация 7 видов сыра, молоко, йогурт;
+                                   сопровождение представителя нашей компании;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    экскурсия по Пасеке;
+                                    БЛАГОТВОРИТЕЛЬНАЯ АКЦИЯ НАКОРМИ ЛЬВА*
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    дегустация 4 вида меда;
+                                   магнит от Нового поворота;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    сопровождение представителя нашей компании;
+                                    самое замечательное настроение;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    магнит от Нового поворота, самое замечательное настроение.
+                                    доброе дело которые делаете вы помогая животным! 
+				    <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
                                 </li>
                             </ul>
                         </div>
