--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -268,39 +268,34 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                        <p><strong>10:00 </strong>
-                                            Выезд с центра Запорожья после минутки позитива.
-                                            Фестивальная - Металлургов - Каховская заберем Вас в этих 3-х местах где
-                                            удобно, о месте посадки пишите при бронировании.
+					    
+                                        <p><strong>10:30  </strong>
+                                            Выезд с центра Запорожья после минутки позитива. 
+					    <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                            Фестивальная - Советская - Автовокзал заберем Вас в этих местах и в путь!
                                         </p>
-                                        <p><strong>10:50 - 11:50 </strong>
-                                            Экскурсия по Пасеке. Посещаем улики где живут трудяжки
-                                            пчелки, в защитных костюмах и под присмотром опытного пасечника!
-                                            Пробуем 4 вида меда: подсолнух, разнотравье, рапсовый и сотовый мед.
-                                            После вкусной дегустации отправляемся дальше на Сырную ферму.
+					    
+                                        <p><strong>11:15-12:30 </strong>
+                                            Черные, белые, шоколадного цвета, большие жеребцы , маленькие понни и не только...
+					    Каких лошадок любите ВЫ? Покататься на этих красавчиках или послушать экскурсию 
+					    о лошадках, а может и то и другое! Хватит времени на все! 
+					    Даже немного полюбоваться видами Каховского водохранилища. 
                                         </p>
 
-                                        <p><strong>12:40 - 14:40 </strong>
-                                            Мы в удивительном месте настоящей Сырной ферме. Такие
-                                            фермы мы видели лишь в Закарпатском Хусте. Но эта еще интереснее! Ведь в
-                                            этом месте рождаются шедевры сыроварения!<br>
-                                            <u>Мы попробуем 7 сыров</u> <img src="./images/Cheese-Farm/cheese.svg"
-                                                alt="сыр">:<br>
-                                            - Свитанок и Адыгейский (коз);<br>
-                                            - Шевер козий (творожный сыр в травах);<br>
-                                            - Качота;<br>
-                                            - Альпийский;<br>
-                                            - Качаковала;<br>
-                                            - Канестрата.<br>
-                                            Попробуем настоящего козьего молочка и вкуснейшего йогурта. Вас ждет
-                                            множество интересных сюрпризов.
-                                            Я могу еще долго писать Вам так нам будет хорошо, но стоит увидеть своими
-                                            глазами эту красоту.
+                                        <p><strong>13:40-15:30 </strong>
+                                            Мы в Центре Пылышенко, слушаем удивительную историю создания 
+					    Зоопарка и знакомимся с животными: милыми мишками, смешными енотиками, 
+					    величественными тирами и конечно грациозными львами! Делаем самые красивые 
+					    фото на память. Посещаем уютное кафе с хот-догами,картшкой фри, мороженным и  кофе.
+					    Кого-же мы увидим: смешных енотиков, быструю носуху, красивейших тигров и львов,
+					    ведь в зоопарке они живут семьями, белого тигра, рысь, гепарда, дикую кошку,
+					    обезьянок, попугайчиков, огромных и добрых мясоедов, сластен мишек и еще много разных 
+					    животных, ведь с каждым днем зоопарк растет и развивается! 
+					    Оставляем денежку от Нас на питание животным и продолжаем свой путь.
                                         </p>
-                                        <p><strong>14:50 </strong>
-                                            Мы уже в Запорожье, В ПОЛНОМ ВОСТОРГЕ с сыром и медом возвращаемся
-                                            домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их
-                                            взять с собой).
+                                        <p><strong>16:30 </strong>
+                                           Мы уже в Запорожье, довольные возвращаемся домой чтоб поделится впечатлениями 
+				  	   с друзьями и близкими (но еще лучше их взять с собой). 
                                         </p>
                                         <hr>
                                         <p>
