--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -294,7 +294,9 @@
 					    Оставляем денежку от Нас на питание животным и продолжаем свой путь.
                                         </p>
                                         <p><strong>16:30 </strong>
-                                           Мы уже в Запорожье, довольные возвращаемся домой чтоб поделится впечатлениями 
+                                           Мы уже в Запорожье, довольные 
+						<img src="/images/Emoji/1f607.png" alt="smile" height="20px">
+					   возвращаемся домой чтоб поделится впечатлениями 
 				  	   с друзьями и близкими (но еще лучше их взять с собой). 
                                         </p>
                                         <hr>
