--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -524,23 +524,23 @@
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('сheeseFarm')"
-                                class="text-white" title="Сырная Ферма Запорожье" href="#сheeseFarm" rel="tag">Сырная Ферма Запорожье
+                                class="text-white" title="Сырная Ферма Запорожье" href="#сheeseFarm" rel="tag">Зоопарк Пылышенко 
 			</a></span>	
 			
                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('apiary')"
-                                class="text-white" title="Пасека Запорожье" href="#apiary" rel="tag">Пасека Запорожье
+                                class="text-white" title="Пасека Запорожье" href="#apiary" rel="tag">Замок Попова 
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyExcursion')"
-                                class="text-white" title="Медовая экскурсия" href="#honeyExcursion" rel="tag">Медовая экскурсия
+                                class="text-white" title="Медовая экскурсия" href="#honeyExcursion" rel="tag">Панское Озеро
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('cheeseTasting')"
-                                class="text-white" title="Дегустация сыра" href="#cheeseTasting" rel="tag">Дегустация сыра
+                                class="text-white" title="Дегустация сыра" href="#cheeseTasting" rel="tag">Лошади Запорожье
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyTasting')"
-                                class="text-white" title="Дегустация меда" href="#honeyTasting" rel="tag">Дегустация меда
+                                class="text-white" title="Дегустация меда" href="#honeyTasting" rel="tag">Львята
 			</a></span>
 
                     </div>
