--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -6,14 +6,14 @@
 <title>Львята и Лошадки | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Львята и Лошадки ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Львята и Лошадки, Экскурсия Центр Пылышенко и Конный комплекс Кентавр">
    
     <!-- Open Graph data-->
     <meta property="og:title" content="Львята и Лошадки">
-    <meta property="og:description" content="Львята и Лошадки"/>
+    <meta property="og:description" content="Экскурсия Центр Пылышенко и Конный комплекс Кентавр."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-lions-and-horses.html"/>
-    <meta property="og:image" content="images/Lions-and-Horses/inside-lions-and-horses.jpg">
+    <meta property="og:image" content="images/Lions-and-Horses/pop-lions-and-horses.jpg">
     <!--End Open Graph data-->
 
    <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
