--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -524,23 +524,23 @@
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('сheeseFarm')"
-                                class="text-white" title="Сырная Ферма Запорожье" href="#сheeseFarm" rel="tag">Зоопарк Пылышенко 
+                                class="text-white" title="Зоопарк Пылышенко " href="#сheeseFarm" rel="tag">Зоопарк Пылышенко 
 			</a></span>	
 			
                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('apiary')"
-                                class="text-white" title="Пасека Запорожье" href="#apiary" rel="tag">Замок Попова 
+                                class="text-white" title="Замок Попова" href="#apiary" rel="tag">Замок Попова 
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyExcursion')"
-                                class="text-white" title="Медовая экскурсия" href="#honeyExcursion" rel="tag">Панское Озеро
+                                class="text-white" title="Панское Озеро" href="#honeyExcursion" rel="tag">Панское Озеро
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('cheeseTasting')"
-                                class="text-white" title="Дегустация сыра" href="#cheeseTasting" rel="tag">Лошади Запорожье
+                                class="text-white" title="Лошади Запорожье" href="#cheeseTasting" rel="tag">Лошади Запорожье
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyTasting')"
-                                class="text-white" title="Дегустация меда" href="#honeyTasting" rel="tag">Львята
+                                class="text-white" title="Львята" href="#honeyTasting" rel="tag">Львята
 			</a></span>
 
                     </div>
