--- a/packages.html
+++ b/packages.html
@@ -590,12 +590,12 @@
                 </div>
                 <!-- //Розовое озеро  -->
                 
-                <!-- Zoo -->
+                <!-- Львята И Лошадки -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3"> Зоопарк </h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
-                            <img src="images/zoo-max.jpg" class="img-fluid" alt=" Экскурсия ">
+                            <img src="images/Lions-and-Horses/pop-lions-and-horses.jpg" class="img-fluid" alt="Львята И Лошадки">
                         </a>
                         <div class="rating">
                             <ul>
@@ -609,12 +609,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Зоопарк </h4>
+                            <h4>Львята И Лошадки</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Zoo -->
+                <!-- //Львята И Лошадки -->
 
             </div>
         </div>
