--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -127,8 +127,10 @@
 			 </p>
 			   
                         <p class="txt-alg-jf">
-                            За 1 день экскурсии с нами ВЫ получите заряд здоровья и отличного настроения,
-                            забудете Ваши печали и заботы, проведете время с близкими! Безопасно, комфортно, весело!
+				За 1 день <span id="ExcursionToZaporozhye">экскурсии из <span id="Zaporozhye">Запорожье</span></span>
+				с нами ВЫ получите заряд здоровья и отличного настроения,
+                                забудете Ваши печали и заботы, проведете время <span id="travels">путешествуя</span>
+				с близкими! Безопасно, комфортно, весело <span id="tourism">в туризме</span>!
 				<img src="/images/Emoji/1f604.png" alt="smile" height="20px">
                         </p>
 			<div id="MoreDetails" style="display: none;">
@@ -523,24 +525,24 @@
                                 class="text-white" title="Туризм" href="#tourism" rel="tag">Туризм
 			</a></span>
 			
-                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ZooPylyshenko')"
-                                class="text-white" title="Зоопарк Пылышенко " href="#ZooPylyshenko" rel="tag">Зоопарк Пылышенко 
+                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('сheeseFarm')"
+                                class="text-white" title="Зоопарк Пылышенко " href="#сheeseFarm" rel="tag">Зоопарк Пылышенко 
 			</a></span>	
 			
-               <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('PopovCastle')"
-                                class="text-white" title="Замок Попова" href="#PopovCastle" rel="tag">Замок Попова 
+               <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('apiary')"
+                                class="text-white" title="Замок Попова" href="#apiary" rel="tag">Замок Попова 
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('PanskoeLake')"
-                                class="text-white" title="Панское Озеро" href="#PanskoeLake" rel="tag">Панское Озеро
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyExcursion')"
+                                class="text-white" title="Панское Озеро" href="#honeyExcursion" rel="tag">Панское Озеро
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('horses')"
-                                class="text-white" title="Лошади Запорожье" href="#horses" rel="tag">Лошади Запорожье
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('cheeseTasting')"
+                                class="text-white" title="Лошади Запорожье" href="#cheeseTasting" rel="tag">Лошади Запорожье
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('lions')"
-                                class="text-white" title="Львята" href="#lions" rel="tag">Львята
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyTasting')"
+                                class="text-white" title="Львята" href="#honeyTasting" rel="tag">Львята
 			</a></span>
 
                     </div>
