--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -376,7 +376,7 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3"> Зоопарк </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                        <a href="https://novipovorot.pp.ua/page-lions-and-horses.html">
                             <img src="images/Lions-and-Horses/pop-lions-and-horses.jpg" class="img-fluid" alt="Львята И Лошадки">
                         </a>
                         <div class="rating">
