--- a/booking.html
+++ b/booking.html
@@ -117,6 +117,7 @@
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option>
+                                    <option>Львята И Лошадки</option>
                                     <option>Розовое Озеро</option>
                                     <option>Хлопковые горы Харькова</option>
                                     <option>Яворовская Ниагара</option>
