--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -168,7 +168,7 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Цена билета <u>350 грн.</u> - от 6 до 200 лет, <u>300 грн.</u> 4 - 6 лет, до 
+                                Цена билета <strong>14.06</strong> <u>350 грн.</u> - от 6 до 200 лет, <u>300 грн.</u> 4 - 6 лет, до 
                                 4х бесплатно (без предоставления отдельного места в транспорте). 
                             </span>
                             <hr>
