--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -190,7 +190,7 @@
                             <hr>
 			   <i>
 			     Места в транспорте по датам оплат, раньше платишь, ближе к водителю 
-			     едешь (1 кто забронировал, выбирает где сидит
+			     едешь - 1 кто забронировал, выбирает где сидит
 			     <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
 			   </i>   
                         </div>
