--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -450,7 +450,7 @@
                                     самое замечательное настроение;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    доброе дело которые делаете вы помогая животным! 
+                                    доброе дело, которое делаете вы помогая животным! 
 				    <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
                                 </li>
                             </ul>
