--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -45,9 +45,9 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
-</head>	
+</head>
 	
-<body>
+  <body>
 
 <!-- header -->
     <header>
@@ -526,24 +526,24 @@
                                 class="text-white" title="Туризм" href="#tourism" rel="tag">Туризм
 			</a></span>
 			
-                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('сheeseFarm')"
-                                class="text-white" title="Зоопарк Пылышенко " href="#сheeseFarm" rel="tag">Зоопарк Пылышенко 
+                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ZooPylyshenko')"
+                                class="text-white" title="Зоопарк Пылышенко " href="#ZooPylyshenko" rel="tag">Зоопарк Пылышенко 
 			</a></span>	
 			
-               <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('apiary')"
-                                class="text-white" title="Замок Попова" href="#apiary" rel="tag">Замок Попова 
+               <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('PopovCastle')"
+                                class="text-white" title="Замок Попова" href="#PopovCastle" rel="tag">Замок Попова 
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyExcursion')"
-                                class="text-white" title="Панское Озеро" href="#honeyExcursion" rel="tag">Панское Озеро
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('PanskoeLake')"
+                                class="text-white" title="Панское Озеро" href="#PanskoeLake" rel="tag">Панское Озеро
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('cheeseTasting')"
-                                class="text-white" title="Лошади Запорожье" href="#cheeseTasting" rel="tag">Лошади Запорожье
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('horses')"
+                                class="text-white" title="Лошади Запорожье" href="#horses" rel="tag">Лошади Запорожье
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('honeyTasting')"
-                                class="text-white" title="Львята" href="#honeyTasting" rel="tag">Львята
+	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('lions')"
+                                class="text-white" title="Львята" href="#lions" rel="tag">Львята
 			</a></span>
 
                     </div>
