--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -119,7 +119,7 @@
                         </div>
                         
                         <h4 class="mb-3">
-				Экскурсия Центр Пылышенко и Конный комплекс Кентавр.
+				Экскурсия <span id="ZooPylyshenko">Центр Пылышенко</span> и <span id="EquestrianComplex">Конный комплекс Кентавр</span>.
                         </h4>
                         
 			 <p class="p-2 bg-success text-white">
