--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -528,7 +528,11 @@
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ZooPylyshenko')"
                                 class="text-white" title="Зоопарк Пылышенко " href="#ZooPylyshenko" rel="tag">Зоопарк Пылышенко 
-			</a></span>	
+			</a></span>
+			
+		<span class="badge rounded-pill bg-secondary"> <a onclick="selectText('EquestrianComplex')"
+                                class="text-white" title="Конный комплекс" href="#EquestrianComplex" rel="tag">Конный комплекс 
+			</a></span>
 			
                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('PopovCastle')"
                                 class="text-white" title="Замок Попова" href="#PopovCastle" rel="tag">Замок Попова 
