--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -538,16 +538,12 @@
                                 class="text-white" title="Замок Попова" href="#PopovCastle" rel="tag">Замок Попова 
 			</a></span>
 			
-	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('PanskoeLake')"
-                                class="text-white" title="Панское Озеро" href="#PanskoeLake" rel="tag">Панское Озеро
-			</a></span>
-			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('horses')"
                                 class="text-white" title="Лошади Запорожье" href="#horses" rel="tag">Лошади Запорожье
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('lions')"
-                                class="text-white" title="Львята" href="#lions" rel="tag">Львята
+                                class="text-white" title="Львята" href="#lions" rel="tag">Львята Запорожье
 			</a></span>
 
                     </div>
