--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -522,6 +522,7 @@
                                 <!-- Места для путешествий-->
                                 <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-balloon-festival.html"
                                         class="scroll">Фестиваль Воздушных Шаров</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-lions-and-horses.html" class="scroll">Львята И Лошадки</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Pink-Lake.html" 
                                        class="scroll">Розовое Oзеро</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html"
