--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -432,7 +432,7 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                 проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;<br>
+                                 Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;<br>
                                   (от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
