--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -433,7 +433,7 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
                                  Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;<br>
-                                  (от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)
+                                  <i>(от количества людей в группе, места в транспорте по датам оплат, раньше заплатил, ближе сидишь)</i>
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     входной билет и экскурсия в Центре Пылышенко;
