--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -140,7 +140,7 @@
                         
                         <!--ПОДРОБНЕЕ-->
                         <div id="MoreDetails" style="display: none;">
-                         <p class="p-2 bg-pink text-white txt-alg-jf">
+                         <p class="txt-alg-jf">
                             Потрясающий храм на обрыве скалы, нависающий над
                             рекой весь в зеленой листве! Это сложно передать  словами! 
                             Нужно увидеть и почувствовать дух этого невероятного места! 
