--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -169,15 +169,15 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Цена билета до <strong>09 Июня</strong> <u>2800 грн.</u> 
+                                Цена билета до <strong>09 Июня</strong> - <u>2800 грн.</u> 
                             </span>
                             <hr>
                             <span class="txt-alg-jf">
-                                С <strong>09 до 18 июня</strong> <u>2860 грн.</u> 
+                                С <strong>09</strong> до <strong>18 Июня</strong> - <u>2860 грн.</u> 
                              </span>
                                         <hr>    
                             <span class="txt-alg-jf">
-                                С <strong>19 июня</strong> <u>2910 грн.</u> 
+                                С <strong>19 Июня</strong> - <u>2910 грн.</u> 
                             </span>
                                         <hr>
                             <i>Предоплата по брони 50% от стоимости, доплата за 3-4 
