--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -270,15 +270,16 @@
                             <div class="col tab-content">
                                 
                                 <div class="tab-pane active mt-3" id="tabs-1" role="tabpanel">
-                                    <h5>19 июня</h5>
+                                    <h5>25 Июня</h5>
                                     <p>
-                                        <strong>08:00</strong>
+                                        <strong>22:00</strong>
                                         Выезд из Центра Запорожья после минутки позитива.
-                                        Едем на МЯГКОМ И УЮТНОМ ТРАНСПОРТЕ тур.класса (раскладные сидения), TV
-                                        (ЛЕГКАЯ ДОРОГА).
-                                        Заберем Вас из Металлургов-Фестивальная-Авто и Ж/Д вокзалы
-                                        (уточняйте при бронировании, можем подобрать по пути в Васильевке
-                                        или в селах по дороге в сторону Арабатки).
+                                        <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                        Едем на комфортабельном транспорте тур.класса (раскладные сидения), 
+                                        <img src="/images/Emoji/tv.png" alt="smile" height="20px">TV
+                                        Заберем Вас Автовокзал-Фестивальная-Металлургов-Каховская(уточняйте при бронировании) 
+                                        Едем безопасным маршрутом, потому долго
+                                        <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
                                     </p>
                                     <p>
                                         <strong>12:30 - 13:00</strong> приезжаем в гостиницу и селимся в номера!
