--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -309,8 +309,9 @@
                                     <p>
                                         <strong>18:40 - 19:00</strong> 
                                         Заселение в гостиницу. Номера стандарт 2-3 местные,
-                                        удобства в номере (если вас двое, селим в 2-х местный
-                                        <img src="/images/Emoji/1f642.png" alt="smile" height="20px">)
+                                        удобства в номере.<br>
+                                        <i>Если вас двое, селим в 2-х местный</i>
+                                        <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
                                         <br>
                                         Все кто устал отправляются на отдых в гостиницу, 
                                         а кто еще хочет гулять и делать потрясающие фото для
