--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -187,7 +187,7 @@
                                     </h5>
                                 </div>
 
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
