--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -211,7 +211,7 @@
                                     </h5>
                                 </div>
 
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body">
 
