--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -99,7 +99,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
                     <!-- Картинка -->
-                    <img src="./images/Pink-Lake-img.jpg" alt="news image" class="img-fluid">
+                    <img src="./images/Svyatogorsk-and-Soledar/inside-Svyatogorsk-and-Soledar-.jpg" alt="news image" class="img-fluid">
                     <!-- //Картинка -->
                     
                     <div class="blog-two-two">
