--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -275,8 +275,8 @@
                                                 <img src="/images/Emoji/tv.png" alt="smile" height="20px">TV
                                                 Заберем Вас Автовокзал - Фестивальная - Металлургов - Каховская
                                                 (уточняйте при бронировании). 
-                                                Едем безопасным маршрутом, потому долго
-                                                <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                                Едем безопасным маршрутом, потому долго.
+                                                <!--<img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
                                             </p>
                                          <hr>
                                              <h5>26 Июня</h5>
@@ -294,13 +294,13 @@
                                                 <strong>14:00 - 16:30</strong> 
                                                 Ураа! Дегустация, мы попробуем 5 видов игристых вин! 
                                                 Будет вкусненько, а еще мы побываем на супер экскурсии и узнаем все секреты 
-                                                приготовления настоящего шампанского😎 Посещение строго от 18 лет.
+                                                приготовления настоящего шампанскогo. Посещение строго от 18 лет.
                                             </p>    
                                             <p>
                                                 <strong>17:30 - 18:00</strong> 
                                                 Ужин в одном из интереснейших кафе. 
-                                                Комплексное меню мы предложим заранее, остальные блюда сможете заказать на месте
-                                                <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                                Комплексное меню мы предложим заранее, остальные блюда сможете заказать на месте.
+                                                <!--<img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
                                             </p>       
                                             <p>
                                                 <strong>18:40 - 19:00</strong> 
@@ -370,7 +370,7 @@
                                                  </svg>
                                                 <!-- TiKTok --> Tik Tok продолжает прогулку.
                                                 Не забывайте о нас когда выставляете сторизы и фото
-                                                <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                               <!-- <img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
                                                 Отмечайте наши странички, Вам +1000000000 в карму.  
                                             </p>     
                                             <hr>
@@ -378,15 +378,15 @@
                                             <p>
                                                 <strong>09:00 - 09:30</strong>
                                                 Завтрак самостоятельно или заказ в гостинице.
-                                                <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                               <!-- <img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
 
                                             </p>
                                             <p>
                                                 <strong>10:00</strong>
                                                 Выселяемся из гостиницы чтоб отправиться на экскурсию по монастырю! 
                                                 Кто опоздает, назначается фотографом и делает всем по фотке
-                                                в супер-ракурсе или поет зажигательную песню, чтоб всем взбодриться 
-                                                <img src="/images/Emoji/1f642.png" alt="smile" height="20px">
+                                                в супер-ракурсе или поет зажигательную песню, чтоб всем взбодриться. 
+                                                <!--<img src="/images/Emoji/1f642.png" alt="smile" height="20px">-->
 
                                             </p>
                                             <p>
