--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -198,7 +198,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <h5> День 1 </h5>
