--- a/page-Pink-Lake.html
+++ b/page-Pink-Lake.html
@@ -206,20 +206,20 @@
                         </ul>
                         </p>
                         <!-- Описание экскурсии -->
-                        <div class="mt-2 mb-3">
-                            <!-- tabs -->
-                            <ul class="nav nav-tabs" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab">День
-                                        первый</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab">День второй</a>
-                                </li>
-                            </ul>
-                            <!-- Tab panels -->
-                            <div class="col tab-content">
-                                <div class="tab-pane active mt-3" id="tabs-1" role="tabpanel">
+                        <div class="accordion mt-3 mb-3" id="accordionExample">
+                            <div class="card">
+                                <div class="card-header" id="headingOne">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link" type="button" data-toggle="collapse"
+                                            data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            <span class="fa fa-angle-right"></span> Описание экскурсии...
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                    data-parent="#accordionExample">
+                                    <div class="card-body txt-alg-jf">
+                                        <h5> День 1 </h5>
                                     <h5>19 июня</h5>
                                     <p>
                                         <strong>08:00</strong>
@@ -266,9 +266,7 @@
                                         Набираем сольки и целебной грязи с собой и назад в гостиницу продолжать отдых на
                                         море!
                                     </p>
-                                </div>
-
-                                <div class="tab-pane mt-3" id="tabs-2" role="tabpanel">
+                                    <hr>
                                     <h5>20 июня</h5>
                                     <p><strong>09:00 - 10:00</strong>
                                         Кушаем, все кто успел купаються разок-другой в море и в путь...
@@ -294,13 +292,13 @@
                                         Не забывайте отмечать наши странички, +10000 в карму и искренняя наша
                                         благодарочка.
                                     </p>
-                                </div>
-
                                 <hr>
                                 <p>
                                     <i> *время указано предварительно и может меняться незначительно для улучшения
                                         отдыха туристам!</i>
                                 </p>
+                            </div>
+                                </div>
                             </div>
                         </div>
 
