--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -145,13 +145,13 @@
                             рекой весь в зеленой листве! Это сложно передать  словами! 
                             Нужно увидеть и почувствовать дух этого невероятного места! 
                          </p>
-                         <p class="txt-alg-jf">
+                         <p class="p-2 bg-warning text-white txt-alg-jf">
                             ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ! 
                             БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ 
                             ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
                             Ждем Вас, Ваших родных, близких и друзей на экскурсию! 
                             Собери компанию 16 человек, 17 едет бесплатно )  
-                            <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
+                           <!-- <img src="/images/Emoji/1f606.png" alt="smile" height="20px">-->
                           </p>
                         </div>
                         <p id="MoreDetailsHide" onclick="document.getElementById('MoreDetails').style.display='block'; document.getElementById('MoreDetailsHide').style.display='none'"
