--- a/page-Svyatogorsk-and-Soledar.html
+++ b/page-Svyatogorsk-and-Soledar.html
@@ -150,7 +150,7 @@
                             БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ 
                             ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
                             Ждем Вас, Ваших родных, близких и друзей на экскурсию! 
-                            Собери компанию 16 человек, 17 едет бесплатно )  
+                            Собери компанию 16 человек, 17 едет бесплатно! 
                            <!-- <img src="/images/Emoji/1f606.png" alt="smile" height="20px">-->
                           </p>
                         </div>
